# deltamud

./: .gitignore  AGREEMENT  CLAUDE.md  COMPATIBILITY_ANALYSIS.md  combine_sources.sh  confdefs.h  syslog
deltamud/: deltamud_schema.sql
deltamud/lib/etc/: date_record
deltamud/src/: .htaccess  Makefile  act.comm.c  act.item.c  act.other.c  clan.c  clan_help_simple.c  comm.c  conf.h  constants.c  fight.c  handler.c  interpreter.c  interpreter.h  shop.c  spec_procs.c  structs.h  syslog  utils.h
deltamud/src/util/: Makefile  dbinterfacebare.c  mudpasswd.c
lib/etc/: date_record
lib/misc/: typos
rust-mud/: .gitignore  COMPATIBILITY.md  Cargo.toml  README.md  build.sh
rust-mud/src/: character.rs  combat.rs  commands.rs  config.rs  connection.rs  database.rs  database_compat.rs  file_loader.rs  game.rs  magic.rs  main.rs  mock_database.rs  object.rs  room.rs  types.rs  world.rs
src/: act.wizard.c  config.c  db.c  db.h  dbinterface.c  dbinterface.h  dbinterface_stub.c.bak  dg_comm.c  interpreter.c  password.c  spells.c  utils.c
src/util/: dbinterfacebare.h  sign.c
