[package]
name = "deltamud"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
mysql_async = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.10"
rand = "0.8"
once_cell = "1.19"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
lazy_static = "1.4"
bitflags = "2.4"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"